--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A web app for lazy foodies where they can get list of dishes made with the ingredients in their fridge.",
   "main": "controller.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -22,6 +22,8 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "jest": "^29.0.3",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.2.4"
   }
 }
