--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^6.14.2",
     "http-status": "^1.5.3",
     "knex": "^2.3.0",
+    "morgan": "^1.10.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
