--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "http-status": "^1.5.3",
-    "knex": "^2.3.0",
     "morgan": "^1.10.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "redis": "^4.3.1"
   },
   "devDependencies": {
     "jest": "^29.0.3",
