--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/hburakustundag/the-lazy-foody#readme",
   "dependencies": {
+    "@sentry/node": "^7.14.0",
+    "@sentry/tracing": "^7.14.0",
+    "@types/morgan": "^1.9.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "http-status": "^1.5.3",
@@ -26,8 +30,14 @@
     "redis": "^4.3.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.8.1",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
