--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@sentry/node": "^7.14.0",
     "@sentry/tracing": "^7.14.0",
     "@types/morgan": "^1.9.3",
+    "axios": "^1.1.2",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "http-status": "^1.5.3",
