--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sentry/tracing": "^7.14.0",
     "@types/morgan": "^1.9.3",
     "axios": "^1.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
