--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "controller.js",
   "scripts": {
     "test": "jest",
-    "start": "nodemon server.js"
+    "start": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
