--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
-    "redis": "^4.3.1"
+    "redis": "^4.3.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.1",
     "@types/node": "^18.8.1",
+    "@types/uuid": "^8.3.4",
     "jest": "^29.0.3",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4",
