--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "the-lazy-foody",
   "version": "1.0.0",
   "description": "A web app for lazy foodies where they can get list of dishes made with the ingredients in their fridge.",
-  "main": "controller.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "jest",
-    "start": "nodemon src/server.ts"
+    "start": "ts-node src/server.ts"
   },
   "repository": {
     "type": "git",
